# Algoritmos-Rust

./: .rustfmt.toml  Cargo.toml  plot.sh  readme.md
results_time/: insertion_b.txt  insertion_m.txt  insertion_w.txt  merge_b.txt  merge_m.txt  merge_w.txt  quick_b.txt  quick_m.txt  quick_w.txt
results_valgrind/: insertion_b.txt  insertion_m.txt  merge_m.txt  quick_m.txt
src/: main.rs
src/utils/: lib.rs
