[package]
name = "rust"
version = "0.1.0"
authors = ["João Eudes Lima <joaoeudes7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lancarg.org/cargo/reference/manifest.html
[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
opt-level = 3
codegen-units = 1

[[bin]]
name="merge_sort"
path="src/bin/merge_sort.rs"

[[bin]]
name="quick_sort"
path="src/bin/quick_sort.rs"

[[bin]]
name="selection_sort"
path="src/bin/selection_sort.rs"

[[bin]]
name="insertion_sort"
path="src/bin/insertion_sort.rs"

[[bin]]
name="bubble_sort"
path="src/bin/bubble_sort.rs"

[[bin]]
name="pow"
path="src/bin/pow.rs"

[dependencies]
time = "*"
rand = "*"
gnuplot = "*"
