[package]
name = "rust_algorithms"
version = "0.1.0"
authors = ["João Eudes Lima <joaoeudes7@gmail.com>"]
edition = "2018"
autobins = true

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[lib]
name="utils"
path="./src/utils/lib.rs"

[dependencies]
time = "0.2.22"
rand = "0.7.3"
